--- a/TradeMyTesla/TradeMyTesla/Base.lproj/Main.storyboard
+++ b/TradeMyTesla/TradeMyTesla/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,14 +21,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="aua-vS-KMq" userLabel="LogoView">
-                                <rect key="frame" x="21" y="44" width="333" height="422"/>
+                                <rect key="frame" x="20" y="64.000000000000028" width="335" height="424.66666666666674"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="422" id="y0c-16-CPS"/>
-                                    <constraint firstAttribute="width" constant="333" id="yaF-VC-4OF"/>
+                                    <constraint firstAttribute="width" secondItem="aua-vS-KMq" secondAttribute="height" multiplier="333:422" id="7Yd-8E-nwS"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This app is not endorsed by Tesla, and any price is entirely fictional." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lah-Lp-0d9" userLabel="DisclaimerLabel">
-                                <rect key="frame" x="20" y="586" width="335" height="41"/>
+                                <rect key="frame" x="20" y="608.66666666666663" width="335" height="41"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="41" id="zuR-5L-siQ"/>
                                 </constraints>
@@ -36,7 +36,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5SJ-Jj-cIu">
-                                <rect key="frame" x="127.66666666666669" y="647" width="120" height="91"/>
+                                <rect key="frame" x="127.66666666666669" y="657.66666666666663" width="120" height="100.33333333333337"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
                                 <state key="normal" title="PROCEED">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -46,14 +46,15 @@
                         <color key="backgroundColor" name="TeslaRed"/>
                         <constraints>
                             <constraint firstItem="Lah-Lp-0d9" firstAttribute="top" relation="lessThanOrEqual" secondItem="aua-vS-KMq" secondAttribute="bottom" constant="120" id="Bi3-Z7-WXL"/>
-                            <constraint firstItem="Lah-Lp-0d9" firstAttribute="top" relation="greaterThanOrEqual" secondItem="aua-vS-KMq" secondAttribute="bottom" constant="80" id="Bzz-rW-HOq"/>
+                            <constraint firstItem="Lah-Lp-0d9" firstAttribute="top" relation="greaterThanOrEqual" secondItem="aua-vS-KMq" secondAttribute="bottom" id="Bzz-rW-HOq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aua-vS-KMq" secondAttribute="trailing" constant="20" id="CTF-3Z-WDr"/>
                             <constraint firstItem="Lah-Lp-0d9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="OyY-sI-GSG"/>
-                            <constraint firstItem="aua-vS-KMq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bha-yH-jvX"/>
+                            <constraint firstItem="aua-vS-KMq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="TYs-Ux-lkz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Lah-Lp-0d9" secondAttribute="trailing" constant="20" id="ckQ-Hn-2OJ"/>
                             <constraint firstItem="5SJ-Jj-cIu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gKS-qt-COq"/>
-                            <constraint firstItem="5SJ-Jj-cIu" firstAttribute="top" secondItem="Lah-Lp-0d9" secondAttribute="bottom" constant="20" id="lyM-b5-yX0"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5SJ-Jj-cIu" secondAttribute="bottom" constant="40" id="t7e-5V-Gyr"/>
-                            <constraint firstItem="aua-vS-KMq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yWi-XJ-QeR"/>
+                            <constraint firstItem="5SJ-Jj-cIu" firstAttribute="top" secondItem="Lah-Lp-0d9" secondAttribute="bottom" constant="8" id="lyM-b5-yX0"/>
+                            <constraint firstItem="aua-vS-KMq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="pHt-O2-MBX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5SJ-Jj-cIu" secondAttribute="bottom" constant="20" id="t7e-5V-Gyr"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
